added branch prediction

--- a/src_qemu/Reader_prog/Makefile
+++ b/src_qemu/Reader_prog/Makefile
@@ -1,7 +1,9 @@
-all: read.c write.c
+all: read.c write.c branch.c
 
 lett:
 	gcc -Wall read.c -o readc
 
 scrit:
 	gcc -Wall write.c -o writec
+bran:
+	gcc -Wall branch.c -o branch
